z-index header fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@ app-header{
   background-color: #FFFFFF;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 900;
   top: 0;
 }
 
